--- a/p-22-ner-position-bias.yml
+++ b/p-22-ner-position-bias.yml
@@ -2,96 +2,13 @@ name: p-22-ner-position-bias
 channels:
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2022.07.19=h06a4308_0
-  - certifi=2022.9.14=py38h06a4308_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - ncurses=6.3=h5eee18b_3
-  - openssl=1.1.1q=h7f8727e_0
-  - pip=22.1.2=py38h06a4308_0
-  - python=3.8.13=h12debd9_0
-  - readline=8.1.2=h7f8727e_1
-  - setuptools=63.4.1=py38h06a4308_0
-  - sqlite=3.39.2=h5082296_0
-  - tk=8.6.12=h1ccaba5_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h7f8727e_1
-  - zlib=1.2.12=h5eee18b_3
+  - pip=22.1.2
+  - python=3.8.13
   - pip:
-    - aiobotocore==2.4.0
-    - aiohttp==3.8.3
-    - aioitertools==0.11.0
-    - aiosignal==1.2.0
-    - async-timeout==4.0.2
-    - attrs==22.1.0
-    - beautifulsoup4==4.11.1
-    - botocore==1.27.59
-    - bs4==0.0.1
-    - charset-normalizer==2.1.1
-    - click==8.1.3
     - datasets==2.5.1
-    - dill==0.3.5.1
-    - docker-pycreds==0.4.0
-    - evaluate==0.2.2
-    - filelock==3.8.0
-    - frozenlist==1.3.1
-    - fsspec==2022.8.2
-    - future==0.18.2
-    - gitdb==4.0.9
-    - gitpython==3.1.27
-    - huggingface-hub==0.9.1
-    - idna==3.4
-    - jmespath==1.0.1
-    - joblib==1.2.0
-    - multidict==6.0.2
-    - multiprocess==0.70.13
-    - neo4j==4.4.8
     - nltk==3.7
-    - numpy==1.23.3
-    - packaging==21.3
-    - padsnlp==0.1.1
-    - pandas==1.5.0
-    - pathtools==0.1.2
-    - promise==2.3
-    - protobuf==3.20.2
-    - psutil==5.9.2
-    - pyarrow==9.0.0
-    - pyparsing==3.0.9
-    - python-dateutil==2.8.2
-    - python-dotenv==0.20.0
-    - pytz==2022.2.1
-    - pyyaml==6.0
-    - regex==2022.9.13
-    - requests==2.28.1
-    - responses==0.18.0
-    - s3fs==2022.8.2
-    - scikit-learn==1.1.2
-    - scipy==1.9.1
-    - sentencepiece==0.1.97
-    - sentry-sdk==1.9.8
-    - seqeval==1.2.2
-    - setproctitle==1.3.2
-    - shortuuid==1.0.9
-    - six==1.16.0
-    - smmap==5.0.0
-    - soupsieve==2.3.2.post1
-    - tagme==0.1.3
-    - threadpoolctl==3.1.0
     - tokenizers==0.12.1
-    - torch==1.12.1
-    - tqdm==4.64.1
     - transformers==4.22.1
-    - typing-extensions==4.3.0
-    - unicode==2.9
-    - urllib3==1.26.12
-    - wandb==0.12.21
-    - wikiextractor==3.0.6
-    - wrapt==1.14.1
-    - xxhash==3.0.0
-    - yarl==1.8.1
+    - pytorch-lightning==1.7.7
+    - wandb==0.13.4
 
