--- a/p-22-ner-position-bias.yml
+++ b/p-22-ner-position-bias.yml
@@ -5,11 +5,13 @@ dependencies:
   - pip=22.1.2
   - python=3.8.13
   - pip:
+    - --extra-index-url https://download.pytorch.org/whl/cu113
     - datasets==2.5.1
     - nltk==3.7
     - tokenizers==0.12.1
     - transformers==4.22.1
+    - torch==1.12.0
     - wandb==0.13.4
-    - seaborn=0.12.1
-    - seqeval=1.2.2
+    - seaborn==0.12.1
+    - seqeval==1.2.2
 
