--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 src/hyperparameter_optimization/data/pamap.pkl
 ~*
 # Created folders
+plots/*
 */plots/*
 */artifacts/*
 */wandb/*
@@ -37,6 +38,7 @@ src/hyperparameter_optimization/data/pamap.pkl
 # *.ps
 # *.eps
 # *.pdf
+*.csv
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
